--- a/code/doc/常用的插件使用方法.md
+++ b/code/doc/常用的插件使用方法.md
@@ -1,4 +1,4 @@
-# svg阿里巴巴矢量图标使用biubiubiu
+# svg阿里巴巴矢量图标使用
 - npm i wget --save
 - 找到icon.js/找到aliUrl修改为新增图标后生成的地址
 - 在终端 npm run icon
@@ -7,7 +7,7 @@
 - icon-hi类名是在项目中约定的class名
 - demo-icon修改大小，颜色自己命名修改的，不能直接使用原类名修改样式
 ---------------------------------------------------------------------------------------------
-# ctUtils公共方法ssss
+# ctUtils公共方法
 - ctUtils公共方法区别于common.js公共方法，主要是一些计算性的公共方法，不存放框架有关的方法
 - 在js方法中引用
 - import utils from '@/utils/ctUtils' 
@@ -15,7 +15,3 @@
 - 在vue中使用
 - 使用：this.$utils.ceshi(); this.$utils.urlString;
 ---------------------------------------------------------------------------------------------
-
-
-
-<!-- ssssss -->
