--- a/code/doc/常用的插件使用方法.md
+++ b/code/doc/常用的插件使用方法.md
@@ -7,7 +7,7 @@
 - icon-hi类名是在项目中约定的class名
 - demo-icon修改大小，颜色自己命名修改的，不能直接使用原类名修改样式
 ---------------------------------------------------------------------------------------------
-# ctUtils公共方法
+# ctUtils公共方法11111
 - ctUtils公共方法区别于common.js公共方法，主要是一些计算性的公共方法，不存放框架有关的方法
 - 在js方法中引用
 - import utils from '@/utils/ctUtils' 
